@@ -1,3 +1,8 @@
+2013-11-01  Nick Alcock  <nick.alcock@oracle.com>
+
+	* runtest.sh: Support valgrind, running DTrace via a wrapper script.
+	Pointer-elision skips valgrind errors.
+
 2013-10-31  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libdtrace/dtrace.h (dtrace_stmtdesc_t): Add padding to work
